add unit test for item image method